# woolyquant

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
scripts/bash/: venv.sh
scripts/ps1/: run.ps1  venv.ps1
server/src/: woolyquant.py
src/: CMakeLists.txt  chatgpt.py  cria_bot.py  keys.env  stockPair.cc  woolyquant.py
src/tradingbot/: .gitignore
src/tradingbot/src/: README.md  cria_trading_bot.py  lumibot_buyhold.py  lumibot_swing_high.py  requirements.txt
web/: .gitignore  package.json
webapp/src/: main.py
webapp/src/pages/: Trading_Bot.py  Trading_Models.py
